[package]
name = "stylus-hello-world"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
stylus-sdk = "0.3.0"
hex = "0.4.3"
wee_alloc = "0.4.5"
poseidon-rs = "0.0.10"
ff = "0.13.0"
winterfell = { version = "0.6.4", features = ["concurrent"] }
clap = { version = "3.1.17", features = ["derive"] }
log = { version = "0.4", default-features = false }
winter-prover = { version = "0.4", default-features = false, features = ["concurrent"] }
winter-verifier = { version = "0.4" }
winter-air = { version = "0.4" }
winter-math = { version = "0.4" }
winter-utils = { version = "0.4" }
confy = { version = "0.4" }
serde = { version = "^1.0", features = ["derive"] }
env_logger = { version = "0.9", default-features = false }
base64 = { version = "0.13.0" }


[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] } 
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
